Add: 戦績未登録状態の表示

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -5,6 +5,8 @@ ja:
     logout: 'ログアウト'
     compare: '比較'
   users:
+    show:
+      no_result: '戦績が登録されていません'
     new:
       title: '新規登録'
       to_login_page: 'ログインページへ'
