--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -9,5 +9,6 @@ ja:
         password: 'パスワード'
         password_confirmation: 'パスワード確認'
       battle_record:
-        title: 'タイトル'
         win_rate: '勝率' 
+      winning_eleven:
+        title: 'タイトル'
