--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -13,3 +13,6 @@ ja:
       title: 'ログイン'
       to_register_page: '登録ページへ'
       password_forget: 'パスワードをお忘れの方はこちら'
+  battle_records:
+    index:
+      title: '戦績一覧'
