--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -3,6 +3,7 @@ ja:
     login: 'ログイン'
     signup: '新規登録'
     register: '登録'
+    update: '更新'
     logout: 'ログアウト'
     password_reset: 'パスワードリセット'
     message:
@@ -17,6 +18,13 @@ ja:
       to_login_page: 'ログインページへ'
     create:
       success: '登録が完了しました'
+    edit:
+      title: '設定'
+      delete_account: '退会する'
+    update:
+      success: '更新しました'
+    destroy:
+      success: '退会しました'
   user_sessions:
     new:
       title: 'ログイン'
