Fix: テーブル設計の変更に伴い、コードを修正

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -3,6 +3,7 @@ ja:
     models:
       user: 'ユーザー'
       battle_record: '戦績'
+      winning_eleven: 'ウイニングイレブン'
     attributes:
       user:
         email: 'メールアドレス'
@@ -11,6 +12,6 @@ ja:
       battle_record:
         rate: 'Rate'
         win_rate: '勝率' 
-        winning_eleven_id: 'ウイニングイレブン'
       winning_eleven:
         title: 'タイトル'
+        series_status: '状態'
